--- a/Index.css
+++ b/Index.css
@@ -6,11 +6,20 @@
 
 #header {
   height: 100vh;
-  background-image: url(./background.png);
+  background-image: url(images/background.png);
   background-position: center;
   background-size: cover;
 }
 
+.waitingForConnection {
+  animation: blinker 1.7s cubic-bezier(.5, 0, 1, 1) infinite alternate;  
+}
+@keyframes blinker { to { opacity: 0; } }
+
+.waitingForConnection2 {
+  animation: blinker2 0.6s cubic-bezier(1, 0, 0, 1) infinite alternate;  
+}
+@keyframes blinker2 { to { opacity: 0; } }
 .container {
   margin-left: 100px;
   margin-right: 100px;
@@ -29,19 +38,25 @@
   margin-top: 90px;
   max-width: 350px;
 }
+.header-text p .line{
+  height: 10px;
+  width: 10px;
+
+}
 
 .square {
   height: 12px;
   width: 12px;
   display: inline-block;
-  background-color: #f67c92;
+  background-color: black;
   margin: 15px 0;
 }
 .common-btn {
   padding: 15px 30px;
-  background-color: transparent;
+  background-color: rgb(30, 29, 29);
   outline: none;
-  border: 2px solid #f67c92;
+  border: none;
+  color: #fff;
   cursor: pointer;
   font-weight: bold;
   border-radius: 4px;
@@ -61,19 +76,19 @@ p {
 .line-1 {
   height: 15px;
   width: 15px;
-  background: #f67c92;
+  background: #2288f5;
   display: inline-block;
 }
 .line-2 {
   height: 1px;
   width: 80px;
-  background: #f67c92;
+  background:  #2288f5;
   display: inline-block;
 }
 .line-3 {
   height: 1px;
   width: 60px;
-  background: #f67c92;
+  background: #2288f5;
   display: inline-block;
 }
 .line {
@@ -86,7 +101,7 @@ p {
   position: fixed;
   right: -250px;
   top: 0;
-  background: #f67c92;
+  background-color:rgb(30, 29, 29);
   z-index: 2;
   transition: 0.5s;
 }
@@ -127,11 +142,17 @@ nav ul li a {
   text-align: right;
 }
 .about-text {
-  max-width: 500px;
+  max-width: 700px;
   display: inline-block;
   margin-right: 100px;
+  color: #f67c92 ;
 }
 
+.options button{
+  background-color: #fff;
+  border: 1px solid #f67c92 ;
+  color: #4a4949;
+}
 .about-text h2 {
   margin: 50px 0 10px;
   font-size: 28px;
@@ -141,6 +162,11 @@ nav ul li a {
   font-size: 20px;
   font-style: italic;
   color: #777;
+}
+.about-text h4 {
+  font-size: 19px;
+  font-style: italic;
+  color:#2288f5;
 }
 
 /*........ feature....... */
@@ -156,14 +182,32 @@ nav ul li a {
   align-items: center;
   justify-content: space-around;
   flex-wrap: wrap;
+  cursor: pointer;
+  transition: width 7s; 
+  padding: 22px; 
+ 
 }
 
 .feature-col {
   flex-basis: 25%;
   text-align: center;
   gap: 10px;
+  border: 2px solid #ccc;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 10px 10px#ccc; 
 }
 
+.feature-row:hover {
+  width: 2px;
+}
+
+.feature-col h4{
+  padding: 10px;
+}
+.feature-col p{
+  padding: 10px;
+}
 .feature-btn {
   display: flex;
   justify-content: center;
@@ -203,9 +247,33 @@ nav ul li a {
 .course-text {
   max-width: 350px;
 }
+.course-text .common-btn a{
+  margin: 30px;
+  color: #fff;
+  margin: 20px;
+}
+
+
+
+.blink_me h1{
+  color: #047bfa;
+  font-weight: 800;
+}
+
+.blink_me {
+  animation: blinker 1s linear infinite;
+}
+
+@keyframes blinker {
+  90% {
+    opacity: 0;
+  }
+}
+
 .course-text .common-btn {
   margin: 30px;
 }
+
 
 /*........... offer........ */
 #offer {
