--- a/Index.css
+++ b/Index.css
@@ -6,7 +6,7 @@
 
 #header {
   height: 100vh;
-  background-image: url(images/background.png);
+  background-image: url(background.png);
   background-position: center;
   background-size: cover;
 }
